# Embedded-system-competition

./: .gitignore  Readme.md  env.sh  test
loongson-gnu-toolchain-8.3-x86_64-loongarch64-linux-gnu-rc1.1/: versions
loongson-gnu-toolchain-8.3-x86_64-loongarch64-linux-gnu-rc1.1/lib64/: libcc1.la
loongson-gnu-toolchain-8.3-x86_64-loongarch64-linux-gnu-rc1.1/loongarch64-linux-gnu/lib/ldscripts/: elf64loongarch.x  elf64loongarch.xc  elf64loongarch.xn  elf64loongarch.xse  elf64loongarch.xsw  elf64loongarch.xswe  elf64loongarch.xw  elf64loongarch.xwe
loongson-gnu-toolchain-8.3-x86_64-loongarch64-linux-gnu-rc1.1/share/info/: gdb.info-8
loongson-gnu-toolchain-8.3-x86_64-loongarch64-linux-gnu-rc1.1/share/man/man1/: loongarch64-linux-gnu-addr2line.1  loongarch64-linux-gnu-ar.1  loongarch64-linux-gnu-as.1  loongarch64-linux-gnu-gdb.1  (+10 more)
loongson-gnu-toolchain-8.3-x86_64-loongarch64-linux-gnu-rc1.1/sysroot/lib64/: libatomic.so.1.2.0  libc.so.6  libgomp.so.1  libnss_db.so.2  libutil.so.1
loongson-gnu-toolchain-8.3-x86_64-loongarch64-linux-gnu-rc1.1/sysroot/sbin/: ldconfig  sln
project/: sensor.db  test  test1.c
project/config/: Makefile  data_process.h  requirements.txt
project/src/: Serial.c  Serial.cpp  sensor.db  test1.c  test_super3.py
project/src/CS/: CMakeCache.txt  CMakeLists.txt  CSshow.cpp  Makefile  cmake_install.cmake
project/src/SC/: a.out  hello
project/src/data_api/: DataApi.c  DataApi.h  dataapi
project/src/data_process/: data_process  data_process.c  data_process.h  data_process_init.c  main.c  test.py  test_bee.py  test_super.py  test_super1.py
(+144 files in other folders)
